part2/2.07_stateful_pingpong/ping-pong/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpongclient
  template:
    metadata:
      labels:
        app: pingpongclient
    spec:
      containers:
        - name: ping-pong-client
          image: georgemihail/ping-pong-client:latest
