part2/2.07_stateful_pingpong/ping-pong/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpongclient
  ports:
    - port: 4567
      protocol: TCP
      targetPort: 3003
