part2/2.07_stateful_pingpong/ping-pong/manifest/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
    - http:
        paths:
        - path: /pingpong
          backend:
            serviceName: ping-pong-svc
            servicePort: 4567
